// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should create palettes Should allow creating Palette instance 1`] = `
Array [
  0,
  0.3333333333333333,
  0.6666666666666666,
  1,
]
`;

exports[`Should create palettes Should allow creating Palette instance 2`] = `
Array [
  SColor {
    "_converter": RgbConverter {},
    "_flags": 8,
    "_value": -16776961,
  },
  SColor {
    "_converter": RgbConverter {},
    "_flags": 1,
    "_value": -11184641,
  },
  SColor {
    "_converter": RgbConverter {},
    "_flags": 1,
    "_value": -5592321,
  },
  SColor {
    "_converter": RgbConverter {},
    "_flags": 8,
    "_value": -1,
  },
  SColor {
    "_converter": RgbConverter {},
    "_flags": 1,
    "_value": -1428903169,
  },
  SColor {
    "_converter": RgbConverter {},
    "_flags": 1,
    "_value": 1420449023,
  },
  SColor {
    "_converter": RgbConverter {},
    "_flags": 8,
    "_value": 8388863,
  },
  SColor {
    "_converter": RgbConverter {},
    "_flags": 1,
    "_value": 5592575,
  },
  SColor {
    "_converter": RgbConverter {},
    "_flags": 1,
    "_value": 2796031,
  },
  SColor {
    "_converter": RgbConverter {},
    "_flags": 8,
    "_value": 65535,
  },
]
`;

exports[`Should create palettes Should allow creating Palette instance 3`] = `
Array [
  SColor {
    "_converter": RgbConverter {},
    "_flags": 8,
    "_value": -16776961,
  },
  SColor {
    "_converter": RgbConverter {},
    "_flags": 1,
    "_value": -7105537,
  },
  SColor {
    "_converter": RgbConverter {},
    "_flags": 1,
    "_value": -3092225,
  },
  SColor {
    "_converter": RgbConverter {},
    "_flags": 8,
    "_value": -1,
  },
  SColor {
    "_converter": RgbConverter {},
    "_flags": 1,
    "_value": -790834945,
  },
  SColor {
    "_converter": RgbConverter {},
    "_flags": 1,
    "_value": -1816882177,
  },
  SColor {
    "_converter": RgbConverter {},
    "_flags": 8,
    "_value": 8388863,
  },
  SColor {
    "_converter": RgbConverter {},
    "_flags": 1,
    "_value": 6853631,
  },
  SColor {
    "_converter": RgbConverter {},
    "_flags": 1,
    "_value": 4837631,
  },
  SColor {
    "_converter": RgbConverter {},
    "_flags": 8,
    "_value": 65535,
  },
]
`;

exports[`Should create palettes Should allow creating Palette instance 4`] = `
Array [
  SColor {
    "_converter": HslConverter {},
    "_flags": 8,
    "_value": 1644900,
  },
  SColor {
    "_converter": HslConverter {},
    "_flags": 1,
    "_value": 1106404,
  },
  SColor {
    "_converter": HslConverter {},
    "_flags": 1,
    "_value": 551396,
  },
  SColor {
    "_converter": HslConverter {},
    "_flags": 8,
    "_value": 12900,
  },
  SColor {
    "_converter": HslConverter {},
    "_flags": 1,
    "_value": 84436452,
  },
  SColor {
    "_converter": HslConverter {},
    "_flags": 1,
    "_value": 168876388,
  },
  SColor {
    "_converter": HslConverter {},
    "_flags": 8,
    "_value": 253299940,
  },
  SColor {
    "_converter": HslConverter {},
    "_flags": 1,
    "_value": 337187044,
  },
  SColor {
    "_converter": HslConverter {},
    "_flags": 1,
    "_value": 421074276,
  },
  SColor {
    "_converter": HslConverter {},
    "_flags": 8,
    "_value": 504961380,
  },
]
`;
